--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@material-ui/icons": "^4.11.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.13.13",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
@@ -38,6 +41,7 @@
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^3.0.0",
     "flow-bin": "^0.150.0",
+    "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.3",
     "style-loader": "^0.23.0",
