--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2"
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.58"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
