--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.3",
+    "serialport": "^9.2.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
