--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.11.2",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
+    "gcode-parser": "^1.3.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-switch-selector": "^1.2.1"
