--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.4.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.0.1",
     "babel-polyfill": "^6.26.0",
     "cors": "^2.8.5",
     "express": "^4.16.3",
