--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "cors": "^2.8.5",
     "express": "^4.16.3",
+    "express-fileupload": "^1.2.1",
     "gcode-parser": "^1.3.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
