--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.4.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.48",
     "@mui/material": "^5.0.1",
     "babel-polyfill": "^6.26.0",
